--- a/app/src/main/res/color/color_button.xml
+++ b/app/src/main/res/color/color_button.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:color="@color/green">
     </item>
-    <item android:color="@color/white"></item>
+    <item android:color="@color/lightWhite"></item>
 
 </selector>
