--- a/app/src/main/res/layout/activity_gerer_mes_menus.xml
+++ b/app/src/main/res/layout/activity_gerer_mes_menus.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,11 +10,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:fontFamily="@font/indie_flower"
     android:text="@string/gerer_mes_menus"
-    android:textColor="@color/black"
     android:textSize="@dimen/bigSize"
     android:gravity="center_horizontal"
-        tools:ignore="MissingConstraints" />
+        style="@style/classicButtonYellow"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
