--- a/app/src/main/res/layout/activity_gerer_mes_tables.xml
+++ b/app/src/main/res/layout/activity_gerer_mes_tables.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,6 +14,5 @@
     android:textColor="@color/black"
     android:textSize="@dimen/bigSize"
     android:gravity="center_horizontal"
-    tools:ignore="MissingConstraints" />"
-    android:layout_height=""
-</androidx.constraintlayout.widget.ConstraintLayout>
+    style="@style/classicButtonOrange" />"
+</RelativeLayout>
