--- a/app/src/main/res/layout/activity_import_menu.xml
+++ b/app/src/main/res/layout/activity_import_menu.xml
@@ -12,10 +12,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/ListeDesMenu"
-    android:fontFamily="@font/indie_flower"
-    android:textColor="@color/black"
+    android:background="@color/white"
     android:textSize="@dimen/bigSize"
     android:gravity="center_horizontal"
+    style="@style/classicButtonYellow"
     >
 
 </TextView>
