--- a/app/src/main/res/layout/activity_recherche_table_step2.xml
+++ b/app/src/main/res/layout/activity_recherche_table_step2.xml
@@ -23,6 +23,7 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
+        style="@style/classicButtonOrange"
         />
     <fragment
         android:id="@+id/tableRecyclerViewFragment"
