--- a/app/src/main/res/layout/recycler_view_menu_item.xml
+++ b/app/src/main/res/layout/recycler_view_menu_item.xml
@@ -1,191 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recyclerViewMenuBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/yellow"
-    android:layout_marginBottom="@dimen/mediumSize"
+    android:layout_margin="@dimen/mediumSize"
+    android:background="@color/lightYellow"
     >
+
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/mediumSize"
-        android:background="@color/yellow"
-        >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/nomEntreeFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="Mon Entree"
-                android:textColor="@color/black"
-                android:textSize="@dimen/bigSize"></TextView>
-            <RatingBar
-                android:id="@+id/difficulteEntreeFragment"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/lightYellow"
-                style="@style/Widget.AppCompat.RatingBar.Indicator"
-                android:isIndicator="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp"
-                android:numStars="5"
-                android:rating="3"
-                />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/nomPlatFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="Mon Plat"
-                android:textColor="@color/black"
-                android:textSize="@dimen/bigSize"></TextView>
-            <RatingBar
-                android:id="@+id/difficultePlatFragment"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/lightYellow"
-                style="@style/Widget.AppCompat.RatingBar.Indicator"
-                android:isIndicator="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp"
-                android:numStars="5"
-                android:rating="3"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/nomDessertFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="Mon Dessert"
-                android:textColor="@color/black"
-                android:textSize="@dimen/bigSize"></TextView>
-            <RatingBar
-                android:id="@+id/difficulteDessertFragment"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/lightYellow"
-                style="@style/Widget.AppCompat.RatingBar.Indicator"
-                android:isIndicator="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp"
-                android:numStars="5"
-                android:rating="3"
-                />
-        </LinearLayout>
-        <LinearLayout
+        <TextView
+            android:id="@+id/nomEntreeFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/prixMenuFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="Price"
-                android:textColor="@color/black"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:textSize="@dimen/bigSize">
-            </TextView>
-            <Button
-                android:id="@+id/wineIndicatorFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/checkbox_color"
-                android:textColor="@color/black"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="avec Vin"
-                android:textSize="@dimen/mediumSize"
-                android:layout_weight="1"
-                ></Button>
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Mon Entree"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            style="@style/classicButtonLightYellow"
+            ></TextView>
+        <RatingBar
+            android:id="@+id/difficulteEntreeFragment"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/lightWhite"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            android:isIndicator="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp"
+            android:numStars="5"
+            android:rating="3"
+            />
+    </LinearLayout>
 
-        </LinearLayout>
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/nomPlatFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Mon Plat"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            style="@style/classicButtonLightYellow"
+            ></TextView>
+        <RatingBar
+            android:id="@+id/difficultePlatFragment"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/lightWhite"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            android:isIndicator="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp"
+            android:numStars="5"
+            android:rating="3"
+            />
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/VegetarienMenuIndicatorFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="Vegetarien"
-                android:backgroundTint="@color/checkbox_color"
-                android:textSize="@dimen/mediumSize"
-                android:layout_weight="1"
-                ></Button>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-            <Button
-                android:id="@+id/VeganMenuIndicatorFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="Vegan"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:backgroundTint="@color/checkbox_color"
-                android:textSize="@dimen/mediumSize"
-                android:layout_weight="1"
-                ></Button>
-
-            <Button
-                android:id="@+id/GlutenMenuIndicatorFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/checkbox_color"
-                android:textColor="@color/black"
-                android:fontFamily="@font/indie_flower"
-                android:gravity="center_horizontal"
-                android:text="Sans gluten"
-                android:textSize="@dimen/mediumSize"
-                android:layout_weight="1"
-                ></Button>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/nomDessertFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Mon Dessert"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            style="@style/classicButtonLightYellow"
+            ></TextView>
+        <RatingBar
+            android:id="@+id/difficulteDessertFragment"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/lightWhite"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            android:isIndicator="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp"
+            android:numStars="5"
+            android:rating="3"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/prixMenuFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Price"
+            android:textColor="@color/black"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:textSize="@dimen/bigSize"
+            style="@style/classicButtonLightYellow"
+            >
+        </TextView>
+        <Button
+            android:id="@+id/wineIndicatorFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/checkbox_color"
+            android:textColor="@color/black"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="avec Vin"
+            android:textSize="@dimen/mediumSize"
+            android:layout_weight="1"
+            ></Button>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/VegetarienMenuIndicatorFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Vegetarien"
+            android:backgroundTint="@color/checkbox_color"
+            android:textSize="@dimen/mediumSize"
+            android:layout_weight="1"
+            ></Button>
+
+        <Button
+            android:id="@+id/VeganMenuIndicatorFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Vegan"
+            android:backgroundTint="@color/checkbox_color"
+            android:textSize="@dimen/mediumSize"
+            android:layout_weight="1"
+            ></Button>
+
+        <Button
+            android:id="@+id/GlutenMenuIndicatorFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/checkbox_color"
+            android:textColor="@color/black"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Sans gluten"
+            android:textSize="@dimen/mediumSize"
+            android:layout_weight="1"
+            ></Button>
+    </LinearLayout>
+
 </LinearLayout>
