--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,4 +65,13 @@
         <item name="backgroundTint">@color/color_button_light_white</item>
         <item name="android:textSize">@dimen/mediumSize</item>
     </style>
+    <style name="filterButton">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/indie_flower</item>
+        <item name="android:shape">rectangle</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="background">@drawable/mybutton</item>
+        <item name="backgroundTint">@color/color_button</item>
+        <item name="android:textSize">@dimen/mediumSize</item>
+    </style>
 </resources>
